TinyLanguage/TinyLanguageParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .TinyLanguageListener import TinyLanguageListener
else:
    from TinyLanguageListener import TinyLanguageListener

class TinyLanguageParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__10=1
    T__9=2
    T__8=3
    T__7=4
    T__6=5
    T__5=6
    T__4=7
    T__3=8
    T__2=9
    T__1=10
    T__0=11
    INT=12
    ID=13
    MUL=14
    DIV=15
    ADD=16
    SUB=17
    EQUALS=18
    NOTEQUALS=19
    GT=20
    GTE=21
    LT=22
    LTE=23
    INC=24
    DEC=25
    COMMENT=26
    WHITESPACE=27

    tokenNames = [ u"<INVALID>", u"'{'", u"')'", u"'output'", u"'script'", 
                   u"'while'", u"'('", u"'if'", u"'else'", u"'='", u"'}'", 
                   u"';'", u"INT", u"ID", u"'*'", u"'/'", u"'+'", u"'-'", 
                   u"'=='", u"'!='", u"'>'", u"'>='", u"'<'", u"'<='", u"'++'", 
                   u"'--'", u"COMMENT", u"WHITESPACE" ]

    RULE_script = 0
    RULE_statement = 1
    RULE_varAssign = 2
    RULE_ifStatement = 3
    RULE_ifCondition = 4
    RULE_ifTrueBlock = 5
    RULE_ifFalseBlock = 6
    RULE_ifBlock = 7
    RULE_whileStatement = 8
    RULE_whileCondition = 9
    RULE_whileBlock = 10
    RULE_outputCall = 11
    RULE_expr = 12
    RULE_idExpr = 13
    RULE_intExpr = 14

    ruleNames =  [ u"script", u"statement", u"varAssign", u"ifStatement", 
                   u"ifCondition", u"ifTrueBlock", u"ifFalseBlock", u"ifBlock", 
                   u"whileStatement", u"whileCondition", u"whileBlock", 
                   u"outputCall", u"expr", u"idExpr", u"intExpr" ]

    def __init__(self, input):
        super(TinyLanguageParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.ScriptContext, self).__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_script

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterScript(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitScript(self)




    def script(self):

        localctx = TinyLanguageParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(self.T__7)
            self.state = 31
            self.match(self.T__10)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32 
                self.statement()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__8) | (1 << self.T__6) | (1 << self.T__5) | (1 << self.T__4) | (1 << self.INT) | (1 << self.ID))) != 0)):
                    break

            self.state = 37
            self.match(self.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def outputCall(self):
            return self.getTypedRuleContext(TinyLanguageParser.OutputCallContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(TinyLanguageParser.IfStatementContext,0)


        def expr(self):
            return self.getTypedRuleContext(TinyLanguageParser.ExprContext,0)


        def varAssign(self):
            return self.getTypedRuleContext(TinyLanguageParser.VarAssignContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(TinyLanguageParser.WhileStatementContext,0)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_statement

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitStatement(self)




    def statement(self):

        localctx = TinyLanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 46
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39 
                self.varAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40 
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 41 
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 42 
                self.outputCall()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 43 
                self.expr(0)
                self.state = 44
                self.match(self.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarAssignContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.VarAssignContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TinyLanguageParser.ExprContext,0)


        def ID(self):
            return self.getToken(TinyLanguageParser.ID, 0)

        def getRuleIndex(self):
            return TinyLanguageParser.RULE_varAssign

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterVarAssign(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitVarAssign(self)




    def varAssign(self):

        localctx = TinyLanguageParser.VarAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(self.ID)
            self.state = 49
            self.match(self.T__2)
            self.state = 50 
            self.expr(0)
            self.state = 51
            self.match(self.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.IfStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ifFalseBlock(self):
            return self.getTypedRuleContext(TinyLanguageParser.IfFalseBlockContext,0)


        def ifCondition(self):
            return self.getTypedRuleContext(TinyLanguageParser.IfConditionContext,0)


        def ifTrueBlock(self):
            return self.getTypedRuleContext(TinyLanguageParser.IfTrueBlockContext,0)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_ifStatement

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterIfStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = TinyLanguageParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(self.T__4)
            self.state = 54
            self.match(self.T__5)
            self.state = 55 
            self.ifCondition()
            self.state = 56
            self.match(self.T__9)
            self.state = 57 
            self.ifTrueBlock()
            self.state = 60
            _la = self._input.LA(1)
            if _la==TinyLanguageParser.T__3:
                self.state = 58
                self.match(self.T__3)
                self.state = 59 
                self.ifFalseBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfConditionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.IfConditionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TinyLanguageParser.ExprContext,0)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_ifCondition

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterIfCondition(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitIfCondition(self)




    def ifCondition(self):

        localctx = TinyLanguageParser.IfConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62 
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfTrueBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.IfTrueBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ifBlock(self):
            return self.getTypedRuleContext(TinyLanguageParser.IfBlockContext,0)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_ifTrueBlock

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterIfTrueBlock(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitIfTrueBlock(self)




    def ifTrueBlock(self):

        localctx = TinyLanguageParser.IfTrueBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifTrueBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64 
            self.ifBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfFalseBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.IfFalseBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ifBlock(self):
            return self.getTypedRuleContext(TinyLanguageParser.IfBlockContext,0)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_ifFalseBlock

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterIfFalseBlock(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitIfFalseBlock(self)




    def ifFalseBlock(self):

        localctx = TinyLanguageParser.IfFalseBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifFalseBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66 
            self.ifBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.IfBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_ifBlock

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterIfBlock(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitIfBlock(self)




    def ifBlock(self):

        localctx = TinyLanguageParser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(self.T__10)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__8) | (1 << self.T__6) | (1 << self.T__5) | (1 << self.T__4) | (1 << self.INT) | (1 << self.ID))) != 0):
                self.state = 69 
                self.statement()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(self.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileStatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.WhileStatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def whileCondition(self):
            return self.getTypedRuleContext(TinyLanguageParser.WhileConditionContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(TinyLanguageParser.WhileBlockContext,0)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_whileStatement

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = TinyLanguageParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(self.T__6)
            self.state = 78
            self.match(self.T__5)
            self.state = 79 
            self.whileCondition()
            self.state = 80
            self.match(self.T__9)
            self.state = 81 
            self.whileBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileConditionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.WhileConditionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TinyLanguageParser.ExprContext,0)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_whileCondition

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterWhileCondition(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitWhileCondition(self)




    def whileCondition(self):

        localctx = TinyLanguageParser.WhileConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileCondition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.WhileBlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_whileBlock

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterWhileBlock(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitWhileBlock(self)




    def whileBlock(self):

        localctx = TinyLanguageParser.WhileBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whileBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(self.T__10)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.T__8) | (1 << self.T__6) | (1 << self.T__5) | (1 << self.T__4) | (1 << self.INT) | (1 << self.ID))) != 0):
                self.state = 86 
                self.statement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(self.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputCallContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.OutputCallContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TinyLanguageParser.ExprContext,0)


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_outputCall

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterOutputCall(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitOutputCall(self)




    def outputCall(self):

        localctx = TinyLanguageParser.OutputCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_outputCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(self.T__8)
            self.state = 95
            self.match(self.T__5)
            self.state = 96 
            self.expr(0)
            self.state = 97
            self.match(self.T__9)
            self.state = 98
            self.match(self.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(TinyLanguageParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TinyLanguageParser.RULE_expr

     
        def copyFrom(self, ctx):
            super(TinyLanguageParser.ExprContext, self).copyFrom(ctx)


    class DivExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.DivExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def DIV(self):
            return self.getToken(TinyLanguageParser.DIV, 0)
        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterDivExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitDivExpr(self)


    class SubExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.SubExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.ExprContext,i)

        def SUB(self):
            return self.getToken(TinyLanguageParser.SUB, 0)

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterSubExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitSubExpr(self)


    class MulExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.MulExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def MUL(self):
            return self.getToken(TinyLanguageParser.MUL, 0)
        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterMulExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitMulExpr(self)


    class IdExprWrapperContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.IdExprWrapperContext, self).__init__(parser)
            self.copyFrom(ctx)

        def idExpr(self):
            return self.getTypedRuleContext(TinyLanguageParser.IdExprContext,0)


        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterIdExprWrapper(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitIdExprWrapper(self)


    class GtExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.GtExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.ExprContext,i)

        def GT(self):
            return self.getToken(TinyLanguageParser.GT, 0)

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterGtExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitGtExpr(self)


    class AddExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.AddExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.ExprContext,i)

        def ADD(self):
            return self.getToken(TinyLanguageParser.ADD, 0)

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterAddExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitAddExpr(self)


    class EqualExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.EqualExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def EQUALS(self):
            return self.getToken(TinyLanguageParser.EQUALS, 0)
        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterEqualExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitEqualExpr(self)


    class ParensExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.ParensExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(TinyLanguageParser.ExprContext,0)


        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterParensExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitParensExpr(self)


    class LtExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.LtExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LT(self):
            return self.getToken(TinyLanguageParser.LT, 0)
        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.ExprContext,i)


        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterLtExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitLtExpr(self)


    class IntExprWrapperContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.IntExprWrapperContext, self).__init__(parser)
            self.copyFrom(ctx)

        def intExpr(self):
            return self.getTypedRuleContext(TinyLanguageParser.IntExprContext,0)


        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterIntExprWrapper(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitIntExprWrapper(self)


    class NotEqualExprContext(ExprContext):

        def __init__(self, parser, ctx): # actually a TinyLanguageParser.ExprContext)
            super(TinyLanguageParser.NotEqualExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLanguageParser.ExprContext,i)

        def NOTEQUALS(self):
            return self.getToken(TinyLanguageParser.NOTEQUALS, 0)

        def enterRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.enterNotEqualExpr(self)

        def exitRule(self, listener):
            if isinstance( listener, TinyLanguageListener ):
                listener.exitNotEqualExpr(self)



    def expr(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TinyLanguageParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            token = self._input.LA(1)
            if token in [self.ID]:
                localctx = TinyLanguageParser.IdExprWrapperContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 101 
                self.idExpr()

            elif token in [self.INT]:
                localctx = TinyLanguageParser.IntExprWrapperContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 102 
                self.intExpr()

            elif token in [self.T__5]:
                localctx = TinyLanguageParser.ParensExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 103
                self.match(self.T__5)
                self.state = 104 
                self.expr(0)
                self.state = 105
                self.match(self.T__9)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 133
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = TinyLanguageParser.AddExprContext(self, TinyLanguageParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 109
                        if not self.precpred(self._ctx, 11):
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 110
                        self.match(self.ADD)
                        self.state = 111 
                        self.expr(12)
                        pass

                    elif la_ == 2:
                        localctx = TinyLanguageParser.SubExprContext(self, TinyLanguageParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 112
                        if not self.precpred(self._ctx, 10):
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 113
                        self.match(self.SUB)
                        self.state = 114 
                        self.expr(11)
                        pass

                    elif la_ == 3:
                        localctx = TinyLanguageParser.MulExprContext(self, TinyLanguageParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 115
                        if not self.precpred(self._ctx, 9):
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 116
                        self.match(self.MUL)
                        self.state = 117 
                        self.expr(10)
                        pass

                    elif la_ == 4:
                        localctx = TinyLanguageParser.DivExprContext(self, TinyLanguageParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 118
                        if not self.precpred(self._ctx, 8):
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 119
                        self.match(self.DIV)
                        self.state = 120 
                        self.expr(9)
                        pass

                    elif la_ == 5:
                        localctx = TinyLanguageParser.EqualExprContext(self, TinyLanguageParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 121
                        if not self.precpred(self._ctx, 7):
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 122
                        self.match(self.EQUALS)
                        self.state = 123 
                        self.expr(8)
                        pass
